# matchmaker

./: .editorconfig  .envrc  .gitignore  .hlint.yaml  .sosrc  LICENSE  Makefile  README.md  cabal.project  cabal.project.freeze  default.nix  environment.sh  evan.nix  matchmaker.cabal  shell.nix
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  hlint-runner.sh
app/: Main.hs
assets/: layout.jinja.template  package.json
assets/css/: style.css
assets/js/: index.js
assets/webpack/: postcss.config.js  webpack.config.js
assets/webpack/plugins/: bundle-hash-plugin.js
migrations/: 20210423114034_users.sql  20210423181548_repositories.sql  20210423181549_contributor_calls.sql
nix/: pkgs.nix
nix/overlays/: haskell-packages.nix
src/: DB.hs  Environment.hs  Foundation.hs  Handler.hs  ImportYesod.hs  Server.hs  Templates.hs
src/DB/: ContributorCall.hs  Helpers.hs  Organisation.hs  Repository.hs  User.hs
src/Handler/: Home.hs  Login.hs  Signup.hs  User.hs
src/Handler/Account/: Create.hs
src/Handler/Login/: Signin.hs
src/Integrations/: GitHub.hs
src/Model/: UserModel.hs
src/Templates/: Helpers.hs  Types.hs
src/Templates/Account/: signup.html
src/Templates/Error/: 500.html
src/Templates/Home/: index.html
src/Templates/Layout/: layout.html
src/Templates/Partials/: FlashAlerts.hs
src/Web/: Auth.hs  FlashAlerts.hs  Form.hs  Helpers.hs  Middleware.hs  Router.hs  Session.hs  Sessions.hs  Templates.hs  Types.hs
src/Web/Controller/: Account.hs  Home.hs  Session.hs  User.hs
src/Web/Form/: Types.hs
src/Web/Sessions/: Server.hs  Types.hs
src/Web/Templates/: Helpers.hs  Types.hs
src/Web/Templates/Account/: signup.html
src/Web/Templates/Home/: index.html  login.html
src/Web/Templates/Layout/: layout.html  layout.jinja  layout.mst
src/Web/Templates/Partials/: FlashAlerts.hs
src/Web/Templates/Session/: login.html
src/Web/View/: Account.hs  Home.hs  Session.hs  User.hs
test/: Main.hs  fixtures.sql
test/DB/: OrganisationSpec.hs  SpecHelpers.hs  UserSpec.hs
test/Web/: AccountCreationSpec.hs
