cabal-version:    3.0
name:             matchmaker
version:          0.0.1.0
homepage:         https://github.com/haskellfoundation/matchmaker#readme
bug-reports:      https://github.com/haskellfoundation/matchmaker/issues
author:           Hécate Moonlight
maintainer:       Hécate Moonlight
license:          MIT
build-type:       Simple
extra-source-files:
    CHANGELOG.md
    LICENSE
    README.md

source-repository head
  type: git
  location: https://github.com/haskellfoundation/matchmaker

common common-extensions
  default-extensions: ConstraintKinds
                      DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      DerivingVia
                      DuplicateRecordFields
                      FlexibleContexts
                      FlexibleInstances
                      GeneralizedNewtypeDeriving
                      InstanceSigs
                      KindSignatures
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      RankNTypes
                      RecordWildCards
                      ScopedTypeVariables
                      StandaloneDeriving
                      TemplateHaskell
                      TypeApplications
                      TypeOperators
  default-language: Haskell2010

common common-ghc-options
  ghc-options: -Wall
               -Wcompat
               -Werror
               -Wno-deprecations
               -Widentities
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wpartial-fields
               -Wredundant-constraints
               -fhide-source-paths
               -Wno-unused-do-bind
               -fwrite-ide-info
               -hiedir=.hie
               -haddock
               -j

common common-rts-options
  ghc-options: -rtsopts
               -threaded
               -with-rtsopts=-N

library
  import: common-extensions
  import: common-ghc-options
  hs-source-dirs:
    src
  exposed-modules:
    DB.ContributorCall
    DB.Organisation
    DB.Repository
    DB.User
    Environment
    Server
    Web.Auth
    Web.FlashAlerts
    Web.Controller.Home
    Web.Controller.Session
    Web.Helpers
    Web.Router
    Web.Sessions
    Web.Templates
    Web.Templates.Partials.FlashAlerts
    Web.Templates.Helpers
    Web.Templates.Types
    Web.Types
    Web.View.Home
    Web.View.Session
  build-depends:
    aeson                       ^>= 1.5,
    base                        ^>= 4.14.1,
    base64-bytestring           ^>= 1.2,
    colourista                  ^>= 0.1,
    cryptonite                  ^>= 0.28,
    envparse                    ^>= 0.4,
    ginger                      ^>= 0.10,
    hashable                    ^>= 1.3,
    http-types                  ^>= 0.12,
    monad-control               ^>= 1.0,
    mtl                         ^>= 2.2.2,
    password                    ^>= 3.0,
    pg-entity                   ^>= 0.0,
    pg-transact                 ^>= 0.3,
    postgresql-simple           ^>= 0.6,
    postgresql-simple-migration ^>= 0.1,
    relude                      ^>= 1.0,
    resource-pool               ^>= 0.2,
    safe-exceptions             ^>= 0.1,
    scotty                      ^>= 0.12,
    stm                         ^>= 2.5,
    string-interpolate          ^>= 0.3,
    template-haskell            ^>= 2.16,
    text                        ^>= 1.2,
    time                        ^>= 1.9,
    unordered-containers        ^>= 0.2,
    uuid                        ^>= 1.3,
    vector                      ^>= 0.12.1,
    wai                         ^>= 3.2,
    wai-cors                    ^>= 0.2,
    wai-extra                   ^>= 3.1,
    wai-middleware-static       ^>= 0.9,
    warp                        ^>= 3.3,
  mixins: base hiding (Prelude)
        , relude ( Relude as Prelude
                 , Relude.Unsafe
                 , Relude.Monad
                 )

executable matchmaker
  import: common-extensions
  import: common-ghc-options
  import: common-rts-options
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
      base
    , matchmaker
    , relude
  mixins: base hiding (Prelude)
        , relude ( Relude as Prelude
                 , Relude.Unsafe
                 , Relude.Monad
                 )

test-suite matchmaker-test
  import: common-extensions
  import: common-ghc-options
  import: common-rts-options
  ghc-options: -Wdeprecations
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  build-depends:
    , base
    , hspec
    , hspec-expectations-lifted
    , hspec-pg-transact
    , matchmaker
    , password
    , postgresql-simple
    , postgresql-simple-migration
    , relude
    , uuid
    , vector
  other-modules:
    DB.UserSpec
    DB.SpecHelpers
    DB.OrganisationSpec
  mixins: base hiding (Prelude)
        , relude ( Relude as Prelude
                 , Relude.Unsafe)
